<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:transitionName="poster"
                app:layout_collapseMode="parallax" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_alignBottom="@+id/main_backdrop"
                android:background="@drawable/black_gradient_bg"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

<!--            Movie Name, Release date -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                android:layout_gravity="bottom"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleBold"
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_25sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnPlay"
                    android:layout_marginEnd="@dimen/_5sdp"
                    tools:text="Marvel"/>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleRegular"
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/director"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_play_circle_outline_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_100sdp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleMedium"
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/director"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toStartOf="@+id/tvTime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleMedium"
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/director"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toStartOf="@+id/tvRatting"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvCategory"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleMedium"
                android:id="@+id/tvRatting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_star_rate_24"
                android:drawablePadding="@dimen/_5sdp"
                tools:text="@string/director"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvTime"
                app:layout_constraintTop_toTopOf="parent" />

            <!--            Synopsis-->

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleMedium"
                android:id="@+id/lblSynopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/synopsis"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleRegular"
                android:id="@+id/tvSynopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblSynopsis"
                tools:text="@string/synopsis" />

            <!--            Score-->

            <LinearLayout
                android:id="@+id/llScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/llReviews"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSynopsis">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:text="@string/score" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleRegular"
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    tools:text="1" />
            </LinearLayout>
            <!--Reviews-->
            <LinearLayout
                android:id="@+id/llReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/llPopularity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/llScore"
                app:layout_constraintTop_toBottomOf="@+id/tvSynopsis">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:text="@string/reviews" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleRegular"
                    android:id="@+id/tvReviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:text="--" />
            </LinearLayout>

            <!--            Popularity-->
            <LinearLayout
                android:id="@+id/llPopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/llReviews"
                app:layout_constraintTop_toBottomOf="@+id/tvSynopsis">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:text="@string/popularity" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontStyleRegular"
                    android:id="@+id/tvPopularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    tools:text="1" />
            </LinearLayout>

            <!--            Director-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/director"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llScore" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleRegular"
                android:id="@+id/tvDirector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/llScore"
                tools:text="@string/director" />

            <!--            Write-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/writer"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDirector" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleRegular"
                android:id="@+id/tvWriter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tvDirector"
                tools:text="@string/writer" />

            <!--            Actors-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/actors"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWriter" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontStyleRegular"
                android:id="@+id/tvActors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tvWriter"
                tools:text="@string/actors" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>